:+1: Add category home and rails crud page

--- a/config/locales/home.en.yml
+++ b/config/locales/home.en.yml
@@ -1,12 +1,13 @@
 en:
-  verified_environments: "Verified Environments"
-  versions: "Versions"
-  tech_stack: "Tech Stack"
-  production_image_creation_procedure: "Production Image Creation Procedure"
-  development_environment_construction_procedure: "Development Environment Construction Procedure"
-  command_collection: "Command Collection"
-  template_description: "Template for developing with Rails 8 + Podman"
-  web_application: "Web Application"
-  frontend: "Frontend"
-  test: "Test"
-  syntax_check: "Syntax Check"
+  home:
+    verified_environments: "Verified Environments"
+    versions: "Versions"
+    tech_stack: "Tech Stack"
+    production_image_creation_procedure: "Production Image Creation Procedure"
+    development_environment_construction_procedure: "Development Environment Construction Procedure"
+    command_collection: "Command Collection"
+    template_description: "Template for developing with Rails 8 + Podman"
+    web_application: "Web Application"
+    frontend: "Frontend"
+    test: "Test"
+    syntax_check: "Syntax Check"
