--- a/config/locales/home.ja.yml
+++ b/config/locales/home.ja.yml
@@ -1,12 +1,13 @@
 ja:
-  verified_environments: "検証済み環境"
-  versions: "バージョン"
-  tech_stack: "技術スタック"
-  production_image_creation_procedure: "本番環境用イメージ作成手順"
-  development_environment_construction_procedure: "開発環境構築手順"
-  command_collection: "コマンド集"
-  template_description: "Rails 8 + Podman で開発するテンプレート"
-  web_application: "Webアプリケーション"
-  frontend: "フロントエンド"
-  test: "テスト"
-  syntax_check: "構文チェック"
+  home:
+    verified_environments: "検証済み環境"
+    versions: "バージョン"
+    tech_stack: "技術スタック"
+    production_image_creation_procedure: "本番環境用イメージ作成手順"
+    development_environment_construction_procedure: "開発環境構築手順"
+    command_collection: "コマンド集"
+    template_description: "Rails 8 + Podman で開発するテンプレート"
+    web_application: "Webアプリケーション"
+    frontend: "フロントエンド"
+    test: "テスト"
+    syntax_check: "構文チェック"
