:bug: Fix hotwired locales

--- a/config/locales/hotwired_samples/options.en.yml
+++ b/config/locales/hotwired_samples/options.en.yml
@@ -1,5 +1,5 @@
 en:
-  turbo_samples:
+  hotwired_samples:
     options:
       live_voting: "Live voting"
       live_voting_description: "Real-time voting app using Turbo Stream."
