--- a/config/locales/hotwired_samples/options.ja.yml
+++ b/config/locales/hotwired_samples/options.ja.yml
@@ -1,5 +1,5 @@
 ja:
-  turbo_samples:
+  hotwired_samples:
     options:
       live_voting: "ライブ投票"
       live_voting_description: "Turbo Stream を利用したリアルタイムでの投票アプリです。"
